--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrap">
         <div class="header">
-            <h1><a href="">JUST 쇼핑몰</a></h1>
+            <h1 class="logo"><a href="">JUST 쇼핑몰</a></h1>
             <ul class="gnb">
                 <li>
                     <a href="#">탑</a>
@@ -52,16 +52,18 @@
         </div>
 
         <div class="slide">
-            <a href="#"><img src="./images/slide1.jpg" alt="딱 일주일만 오픈기념 15%"></a>
-            <a href="#"><img src="./images/slide2.jpg" alt="세가지 혜택 받으러가기"></a>
-            <a href="#"><img src="./images/slide3.jpg" alt="1+1 두장 구매시 15% 할인"></a>
+            <div class="items">
+                <a href="#"><img src="./images/slide1.jpg" alt="딱 일주일만 오픈기념 15%"></a>
+                <a href="#"><img src="./images/slide2.jpg" alt="세가지 혜택 받으러가기"></a>
+                <a href="#"><img src="./images/slide3.jpg" alt="1+1 두장 구매시 15% 할인"></a>
+            </div>
         </div>
 
-        <div class="contents"></div>
+        <div class="contents">
             <div class="tab">
                 <div class="tab_title">
-                    <a href="#">공지사항</a>
-                    <a href="#">갤러리</a>
+                    <a class="notice_btn active" href="#">공지사항</a>
+                    <a class="gallery_btn" href="#">갤러리</a>
                 </div>
                 <div class="tab_contents">
                     <ul class="notice">
@@ -70,7 +72,7 @@
                         <li><a href="#">쿠폰 다운로드 & 사용방법</a></li>
                         <li><a href="#">모바일 APP설치하고 10%할인쿠폰받자!! 2021년 2월 무이자 할부 카드 안내</a></li>
                     </ul>
-
+                    
                     <ul class="gallery">
                         <li><a href="#"><img src="./images/gallery1.jpg" alt="갤러리 이미지 1"></a></li>
                         <li><a href="#"><img src="./images/gallery2.jpg" alt="갤러리 이미지 2"></a></li>
@@ -83,21 +85,29 @@
                     <img src="./images/banner.jpg" alt="New 10% 매일매일 신상업데이트">
                 </a>
             </div>
-            <div class="iink">
+            <div class="link">
                 <a href="#">나의 계정</a>
                 <a href="#">헤이 음악</a>
                 <a href="#">계정 추가</a>
                 <a href="#">클라우드</a>
             </div>
+        </div>
+
         <div class="footer">
             <div class="f_logo"><img src="./images/logo-footer.png" alt="하단 JUST 쇼핑몰 로고"></div>
             <p>ⓒ 2020 Kakao Enterprise. The Kakao i is a trademark of Kakaocorp.</p>
             <div class="sns">
-                <a href="#">facebook</a>
-                <a href="#">instagram</a>
-                <a href="#">yotube</a>
+                    <a href="#">facebook</a>
+                    <a href="#">instagram</a>
+                    <a href="#">yotube</a>
             </div>
         </div>
+    </div>
+
+    <div class="modal">
+        <h2>별에도 아무 토끼,</h2>
+        <p>별에도 아무 토끼, 지나고 이네들은 라이너 봅니다. 밤이 아침이 풀이 많은 듯합니다. 위에 무덤 언덕 별에도 노새, 듯합니다. 때 책상을 한 별 있습니다. 강아지, 이름을 동경과 새워 아침이 부끄러운 묻힌 헤는 무성할 까닭입니다. 무엇인지 비둘기, 별 내린 별 흙으로 계십니다. 하나에 걱정도 보고, 딴은 듯합니다. 한 파란 비둘기, 아름다운 별 노새, 까닭입니다. 가슴속에 이름자를 별 마리아 둘 버리었습니다. 불러 써 별에도 강아지, 딴은 있습니다.</p>
+        <a href="#" class="close">닫기</a>
     </div>
 </body>
 </html>
