--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JUST 쇼핑몰</title>
+    <script src="./js/jquery-1.12.4.js"></script>
     <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
@@ -67,7 +68,7 @@
                 </div>
                 <div class="tab_contents">
                     <ul class="notice">
-                        <li><a href="#">2021년 2월 무이자 할부 카드 안내 2021년 2월 무이자 할부 카드 안내</a></li>
+                        <li><a href="#" class="show_modal">2021년 2월 무이자 할부 카드 안내 2021년 2월 무이자 할부 카드 안내</a></li>
                         <li><a href="#">쿠폰 사용안내 2021년 2월 무이자 할부 카드 안내</a></li>
                         <li><a href="#">쿠폰 다운로드 & 사용방법</a></li>
                         <li><a href="#">모바일 APP설치하고 10%할인쿠폰받자!! 2021년 2월 무이자 할부 카드 안내</a></li>
@@ -109,5 +110,18 @@
         <p>별에도 아무 토끼, 지나고 이네들은 라이너 봅니다. 밤이 아침이 풀이 많은 듯합니다. 위에 무덤 언덕 별에도 노새, 듯합니다. 때 책상을 한 별 있습니다. 강아지, 이름을 동경과 새워 아침이 부끄러운 묻힌 헤는 무성할 까닭입니다. 무엇인지 비둘기, 별 내린 별 흙으로 계십니다. 하나에 걱정도 보고, 딴은 듯합니다. 한 파란 비둘기, 아름다운 별 노새, 까닭입니다. 가슴속에 이름자를 별 마리아 둘 버리었습니다. 불러 써 별에도 강아지, 딴은 있습니다.</p>
         <a href="#" class="close">닫기</a>
     </div>
+
+    <script>
+        $(function(){
+            console.log($('.show_modal'))
+            $('.show_modal').click(function(){
+                $('.modal').addClass('active')
+            })
+
+            $('.close').click(function(){
+                $('.modal').removeClass('active')
+            })
+        })
+    </script>
 </body>
 </html>
